Modify some texts

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -30,7 +30,7 @@
         <activity
             android:name="wcm.towolf.heartstonewr.detail.DialogActivity"
             android:theme="@android:style/Theme.Dialog"
-            android:label="input your name" >
+            android:label="@string/detail_dialog_label" >
         </activity>
         <activity android:name="wcm.towolf.heartstonewr.detail.DetailListActivity"
             android:theme= "@android:style/Theme.Light.NoTitleBar"></activity>
