charactor name limit extend to 40,
change TextView of role name to marquee

--- a/project.properties
+++ b/project.properties
@@ -12,5 +12,6 @@ proguard.config=${sdk.dir}/tools/proguard/proguard-android.txt:proguard-project.
 
 # Project target.
 target=android-17
-android.library.reference.1=../../workspaceForImport/RatioFixer
-android.library.reference.2=../RatioFixer
+android.library.reference.1=..\\..\\workspaceForImport\\RatioFixer
+android.library.reference.2=..\\RatioFixer
+android.library.reference.3=../../workspace/RatioFixer
