add back chinese role type

--- a/project.properties
+++ b/project.properties
@@ -15,3 +15,4 @@ target=android-17
 android.library.reference.1=..\\..\\workspaceForImport\\RatioFixer
 android.library.reference.2=..\\RatioFixer
 android.library.reference.3=../../workspace/RatioFixer
+android.library.reference.4=../../workspaceForImport/RatioFixer
