--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -4,6 +4,8 @@
     android:versionCode="5"
     android:versionName="1.5" >
 
+        <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" /> 
+    
     <uses-sdk
         android:minSdkVersion="11"
         android:targetSdkVersion="16" />
@@ -46,7 +48,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
+   
     </application>
 
 </manifest>
