--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="wcm.towolf.hearthstonewr"
-    android:versionCode="6"
-    android:versionName="2.0" >
+    android:versionCode="8"
+    android:versionName="2.0.2" >
 
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
@@ -55,6 +55,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name="ArenaDetailActivity"></activity>
     </application>
 
 </manifest>
