Update DetailListActivity UI

--- a/project.properties
+++ b/project.properties
@@ -16,3 +16,4 @@ android.library.reference.1=..\\..\\workspaceForImport\\RatioFixer
 android.library.reference.2=..\\RatioFixer
 android.library.reference.3=../../workspace/RatioFixer
 android.library.reference.4=../../workspaceForImport/RatioFixer
+android.library.reference.5=../RatioFixer
