--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -65,6 +65,8 @@
         </activity>
         <activity android:name="ExportActivity">
         </activity>
+        <activity android:name="WorldDataActivity">
+        </activity>
     </application>
 
 </manifest>
